# but wallet names are unreadable -Fixed
# looks like some top padding is required here, what do you think?
-I prefer without it, it’s more standard with native UI

# looks odd that "what to send" and "amount" labels are of different size
-Fixed

# "+ Add fields" seems too close to "who signs", what do you think?
- I believe it’s fixed  but I have’t Benn able to test in “real life” (I commented out the ng-hide for test)

# and whenever you select sending data in "what to send", the Send button seems too close to the bottom of the screen
- I will also be cut  or under the fold if the signer list get long enough/ To address this we would have to make the button a fixed position and the test of the page scrollable within something like an iframe

# the new sent/received tags are so big, they do not look well on iPhone 5 screen (change the width in package.json to 320px to reproduce)
I have 0 bytes and no history in my build so I can’t re produce it but it looks like this screen would need some adjustment.

# not sure if dollar amount is correctly aligned with green checkmark, what do you think?
-I added some offset. Fixed.

# "textcoin" tags now get wrapped even on 400px screen
- I was not able to reproduce, I have no history.

# well, they were wrapped before but at least they kept the padding to the right

# when i start typing into the Amount field on the Send tab, the field height suddenly changes
- Do you talk about the send page. I don’t observe that.

# what made you remove the gradient color from the home screen?
- Not on purpose. It has been restored.

# when i start typing into the Address field on the Send tab, the field height suddenly changes too
- Do you talk about the send page. I don’t observe that. 

 - I also made sure sore url in the witnesses preferences won’t run out of screen

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -189,6 +189,7 @@ h4.title a {
 .preferences .name,
 .preferences .url {
     white-space: normal;
+    overflow-wrap: break-word;
 }
 
 .preferences .address {
@@ -634,7 +635,7 @@ ul.manage li {
   font-size: 14px;
   font-weight: 400;
   padding-top: 0 !important;
-  color: #2C3E50;
+  color: #A5B2BF;
 
 }
 
